Fix internal access error
https://robolectric.org/getting-started/#running-with-java-17-and-higher